Loading from json basics, readability fix.

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -600,9 +600,6 @@ input[type=text]
 .domain {
   height: 64px;
   overflow: hidden;
-  width: 357;
-  min-width: 357;
-  z-index: -100;
   
   display: flex;
   white-space: nowrap;
